--- a/IST541/lab4/index.html
+++ b/IST541/lab4/index.html
@@ -10,41 +10,22 @@
 <body>
 <div id="wrapper">
 <h1> Three main ways to exercise: aerobic/cardio, strength training, and flexibility/balance.</h1>
-<table border="1">
-<tr>
-  <td>
-	  <img src="img/aerobic.jpg" 
-	width="228" height="177"  /><br /> 
-	  <strong>Aerobic</strong><br>
-	<audio controls src="audio/aerobic.mp3"></audio>
-  </td>		
-    <td>
-		<img src="img/strength.jpg" width="228" height="177" /><br />
-		<strong>Strength</strong><br>
-   <audio controls src="audio/strength.mp3"></audio>	  
-</td>	
-  <td>
-	  <img src="img/flexibility.jpg" width="228" height="177" /><br /> 
-	  <strong>Flexibility</strong><br>
-	  <audio controls src="audio/flexibility.mp3">
-	  </audio>
-	  </td>
-	</tr>
-</table>
 	
-<h2 style="text-align:center;">The Health Benefits of Exercise</h2>
-<div class="video-embed">
-  <iframe
-    src="https://www.youtube.com/embed/jSuxMiRxnZg?si=lsitCFtInZSIG30O&modestbranding=1&rel=0"
-    title="YouTube video player"
-    loading="lazy"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin"
-    allowfullscreen>
-  </iframe>
+	<nav class="nav" aria-label="Primary">
+ 
+  <a href="exercises.html">Audio</a>
+  
+  <a href="video.html">Video</a>
+</nav>
+	
+
+	<img class="first" src="img/first.jpg" alt="People exercising for better health">
+	
+
+ 
 </div>
 		
 
-</div>
+
 </body>
 </html>
