--- a/IST541/lab4/video.html
+++ b/IST541/lab4/video.html
@@ -8,26 +8,23 @@
 
 <body>
 <div id="wrapper"> 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 		
 	<nav class="nav">
 		  <a href="exercises.html">Audio</a>
   
-  <a href="video.html">Video</a>
+  <a href="video.html">Videos</a>
 		  </nav>
 	<br> <br>
+	<video controls width="300">
+    <source src="video/gym.mp4" >
+  </video>
+	<br> <br>
 	<video controls width="500">
-<source src="video/labubu.mp4">
-
-		
-		 
-
-		
+	<source src="video/gym1.mp4">
 	</video>
-		
-
 	
-   
+		
 </div>
 </body>
 </html>
