--- a/IST541/WorkoutProject/assessment.html
+++ b/IST541/WorkoutProject/assessment.html
@@ -9,9 +9,15 @@
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+<div class="container inner">
+<div class="site-title">
+	<nav class="nav" aria-label="Primary">
+		<a href="benefits.html">Benefits</a><a href="how to do a correct plank.html">How to Do a Correct Plank</a><a href="three main ways to exercise.html">Three Main Ways to Exercise</a><a href="resources1.html">Resources</a><a href="assessment.html">Quiz</a><a href="about.html">About</a></nav>
+	</div>	
   <!-- jQuery (needed for the small script below) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
+	
 
 <body class="assessment">
   <div id="wrapper">
