--- a/IST541/WorkoutProject/about.html
+++ b/IST541/WorkoutProject/about.html
@@ -2,28 +2,28 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title> Benefits </title>
+<title>About </title>
+<link rel="stylesheet" href="css/main.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-
-<link rel="stylesheet" href="css/main.css">
 <div class="container inner">
 <div class="site-title">
   <nav class="nav" aria-label="Primary"><a href="benefits.html">Benefits</a><a href="how to do a correct plank.html">How to Do a Correct Plank</a><a href="three main ways to exercise.html">Three Main Ways to Exercise</a><a href="resources1.html">Resources</a><a href="assessment.html">Quiz</a><a href="about.html">About</a></nav>
 </div>
 <body>
-<h1 class="page-title"> The Health Benefits of Exercise</h1>
-<div class="video-wrap">
-  <div class="video-16x9">
-    <iframe
-        src="https://www.youtube-nocookie.com/embed/jSuxMiRxnZg?si=tJXxRHzdlZYdMqVU"
-        title="Benefits of Regular Exercise"
-        loading="lazy"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen> </iframe>
-  </div>
-</div>
-<a href="index.html">Back to Home</a>
+<header>
+  <h1> </h1>
+</header>
+<main>
+  <section class="credits">
+    <h2> Content & Resources</h2>
+    <ul>
+      <li> Demic Story / @demicstory (by @kingdemic). “Plank Exercise Reel.” Instagram, 2025. Plank Exercise Reel . Accessed 2025-09-06.</li>
+      <li> https://youtu.be/jSuxMiRxnZg?si=jhQKoCOAEynpddBo </li>
+      <li> ChatGPT from CSUMB </li>
+    </ul>
+  </section>
+</main>
 </body>
 </div>
 </html>
